fll-live-initramfs (2.1.3) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 31 Mar 2008 14:25:48 +0200

fll-live-initramfs (2.1.2) unstable; urgency=low

  * Remove startpar hack, lets not provide it as a real option here for now.
  * Do not use -f (canonicalize) option to readlink, its not needed and klibc
    realink doesn't support it.
  * No need to override sleep, klibc's sleep will be used by default as of
    busybox 1:1.9.2-2. Adjust versioned dependency on busybox.

 -- Kel Modderman <kel@otaku42.de>  Mon, 31 Mar 2008 18:53:43 +1000

fll-live-initramfs (2.1.1) unstable; urgency=low

  * Add shell functions to pedantically select the exact binary that will be
    called as 'mount' and 'sleep'.
  * Simplify return code usage in fll_mount().

 -- Kel Modderman <kel@otaku42.de>  Tue, 25 Mar 2008 17:09:47 +1000

fll-live-initramfs (2.1.0) unstable; urgency=low

  * General shell flow cleanup of fll_finger_blockdevs().
  * Unconditionally modprobe loop before loop-mounting files/devices.
  * Don't hardcode the path to sleep.
  * Print a progress bar as well as percentage metre when copying media to
    ram.

 -- Kel Modderman <kel@otaku42.de>  Mon, 24 Mar 2008 22:58:40 +1000

fll-live-initramfs (2.0.23) unstable; urgency=low

  * Remove fallback detection of lzma infected squashfs images, klibc's fstype
    utility is capable of its detection.

 -- Kel Modderman <kel@otaku42.de>  Sun, 23 Mar 2008 09:53:18 +1000

fll-live-initramfs (2.0.22) unstable; urgency=low

  * Due to indecision, we now "tweak" irqbalance initscript runlevel
    configuration here, as we are do similar actions for other scripts at this
    point.

 -- Kel Modderman <kel@otaku42.de>  Thu, 06 Mar 2008 16:12:08 +1000

fll-live-initramfs (2.0.21) unstable; urgency=low

  * Using the chroot's update-rc.d to unlink initscript symlinks from the
    runlevel directories is overkill; it is slower and totally uneccessary. It