@@ -1,8 +1,9 @@
 fll-live-initramfs (2.1.3) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * Use dh centric debian/rules, build depend on debhelper >= 7.
+  * Add debian/install to replace what used to be done manually.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 31 Mar 2008 14:25:48 +0200
+ -- Kel Modderman <kel@otaku42.de>  Mon, 05 May 2008 16:38:54 +1000
 
 fll-live-initramfs (2.1.2) unstable; urgency=low
 
